--- a/人工智能.md
+++ b/人工智能.md
@@ -2300,7 +2300,391 @@ softplus可以用relu近似，得到
 # LLM
 
 
-## ollama
+## vllm
+
+[vllm-project/vllm: A high-throughput and memory-efficient inference and serving engine for LLMs](https://github.com/vllm-project/vllm)
+
+支持大模型推理、部署和微调。
+
+### 推理
+
+推理时可以在python中进行加载模型进行推理，也可以通过命令行进行推理
+
+
+### 微调
+
+[Reinforcement Learning from Human Feedback - vLLM](https://docs.vllm.ai/en/latest/training/rlhf/)
+
+需要结合其它库如 trl 对大模型进行微调
+
+
+## LLaMA-Factory
+
+[hiyouga/LLaMA-Factory: Unified Efficient Fine-Tuning of 100+ LLMs & VLMs (ACL 2024)](https://github.com/hiyouga/LLaMA-Factory)
+
+用于微调大模型，还提供了一些数据集[Provided Datasets](https://github.com/hiyouga/LLaMA-Factory?tab=readme-ov-file#provided-datasets)
+
+
+## langchain
+
+[langchain-ai/langchain: 🦜🔗 The platform for reliable agents.](https://github.com/langchain-ai/langchain)
+
+用来创建大模型应用
+
+### 调用模型
+
+可以通过设置key来调用大模型api服务，如下所示
+
+```python
+# 需要提前设置claude的key
+from langchain.agents import create_agent
+
+def get_weather(city: str) -> str:
+    """Get weather for a given city."""
+    return f"It's always sunny in {city}!"
+
+agent = create_agent(
+    model="claude-sonnet-4-5-20250929",
+    tools=[get_weather],
+    system_prompt="You are a helpful assistant",
+)
+
+# Run the agent
+agent.invoke(
+    {"messages": [{"role": "user", "content": "what is the weather in sf"}]}
+)
+```
+
+也可以使用[langchain_ollama](https://reference.langchain.com/python/integrations/langchain_ollama/)插件调用ollama下载到本地的模型，如下所示
+
+```python
+from langchain_ollama import ChatOllama
+
+model = ChatOllama(model="gemma3:latest", validate_model_on_init=True,
+    temperature=0.8,
+    num_predict=256,
+)
+
+messages = [
+    ("system", "You are a helpful translator. Translate the user sentence to French."),
+    ("human", "I love programming."),
+]
+model.invoke(messages)
+```
+
+如果是huggingface上下载的模型，可以用 [langchain_huggingface](https://reference.langchain.com/python/integrations/langchain_huggingface/) 调用
+
+
+### Agents
+
+[Agents - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/agents)
+
+langchain可以用来创建agents，agents将语言模型和工具结合起来，让大模型推理任务，决定用哪个工具。
+
+```mermaid
+%%{
+  init: {
+    "fontFamily": "monospace",
+    "flowchart": {
+      "curve": "curve"
+    },
+    "themeVariables": {"edgeLabelBackground": "transparent"}
+  }
+}%%
+graph TD
+  %% Outside the agent
+  QUERY([input])
+  LLM{model}
+  TOOL(tools)
+  ANSWER([output])
+
+  %% Main flows (no inline labels)
+  QUERY --> LLM
+  LLM --"action"--> TOOL
+  TOOL --"observation"--> LLM
+  LLM --"finish"--> ANSWER
+
+  classDef blueHighlight fill:#0a1c25,stroke:#0a455f,color:#bae6fd;
+  classDef greenHighlight fill:#0b1e1a,stroke:#0c4c39,color:#9ce4c4;
+  class QUERY blueHighlight;
+  class ANSWER blueHighlight;
+```
+
+agent中的model是agent的推理引擎，可以支持静态模型（直接读取模型），动态模型（可以切换模型）。
+tools让agent可以操作资源（如查询天气，搜索资料），当然tools可以为空。
+langchain可以设置[dynamic-system-prompt](https://docs.langchain.com/oss/python/langchain/agents#dynamic-system-prompt)，如根据用户角色来输入不同的系统提示词。
+
+对于部分支持工具调用的模型，可以结构化输出
+
+```python
+from langchain_ollama import ChatOllama
+from langchain.agents import create_agent
+from langchain.agents.structured_output import ToolStrategy
+from pydantic import BaseModel
+
+class ContactInfo(BaseModel):
+    name: str
+    email: str
+    phone: str
+    
+# qwen3:4b 支持工具调用
+model = ChatOllama(model="qwen3:4b", validate_model_on_init=True,
+    temperature=0.8,
+    num_predict=256,
+)
+
+agent = create_agent(model, response_format=ToolStrategy(ContactInfo))
+
+result = agent.invoke({
+    "messages": [{"role": "user", "content": "Extract contact info from: John Doe, john@example.com, (555) 123-4567"}]
+})
+
+print(result["structured_response"])
+```
+
+
+
+### Models
+
+[Models - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/models)
+
+langchain支持三种访问大模型的方式：[invoke](https://docs.langchain.com/oss/python/langchain/models#invoke)（常规输入输出）、[stream](https://docs.langchain.com/oss/python/langchain/models#stream)（实时输出）和[batch](https://docs.langchain.com/oss/python/langchain/models#batch)（多输入多输出）
+
+一些模型支持工具调用，具体可以参考下面这个例子
+
+```mermaid
+sequenceDiagram
+    participant U as User
+    participant M as Model
+    participant T as Tools
+
+    U->>M: "What's the weather in SF and NYC?"
+    M->>M: Analyze request & decide tools needed
+
+    par Parallel Tool Calls
+        M->>T: get_weather("San Francisco")
+        M->>T: get_weather("New York")
+    end
+
+    par Tool Execution
+        T-->>M: SF weather data
+        T-->>M: NYC weather data
+    end
+
+    M->>M: Process results & generate response
+    M->>U: "SF: 72°F sunny, NYC: 68°F cloudy"
+```
+
+工具调用的函数使用 `@tool` 修饰，下面是一个基于agent的例子
+
+```python
+from langchain_ollama import ChatOllama
+from langchain.tools import tool
+from langchain.agents import create_agent
+
+@tool
+def get_weather(location: str)-> str:
+    """Get the weather at a location."""
+    return f"It's sunny in {location}"
+
+model = ChatOllama(model="qwen3:4b", validate_model_on_init=True,
+    num_predict=1024,
+)
+
+agent = create_agent(model, tools=[get_weather])
+
+response = agent.invoke({"messages": [{"role": "user", "content": "What's the weather like in Boston?"}]},)
+print(response)
+```
+
+还有一些高级特征，参见：[advanced-topics](https://docs.langchain.com/oss/python/langchain/models#advanced-topics)
+
+### Messages
+
+[Messages - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/messages)
+
+messages是对话的基本单元，包括Role、Content和Metadata
+
+`langchain.messages`中提供了三种消息，分别为HumanMessage（代表用户输入）, AIMessage（代表模型生成的回答）和SystemMessage（针对模型的提示词），这些messages主要用来管理多轮对话、加入系统指令，如下所示
+
+```python
+from langchain.messages import SystemMessage, HumanMessage, AIMessage
+
+messages = [
+    SystemMessage("You are a poetry expert"),
+    HumanMessage("Write a haiku about spring"),
+    AIMessage("Cherry blossoms bloom...")
+]
+response = model.invoke(messages)
+```
+
+类似的可以直接使用字典传入
+```python
+messages = [
+    {"role": "system", "content": "You are a poetry expert"},
+    {"role": "user", "content": "Write a haiku about spring"},
+    {"role": "assistant", "content": "Cherry blossoms bloom..."}
+]
+response = model.invoke(messages)
+```
+
+消息的内容还支持多模态信息，具体参考[message-content](https://docs.langchain.com/oss/python/langchain/messages#message-content)
+
+### Short-term memory
+
+[Short-term memory - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/short-term-memory)
+
+short-term memory让模型能够记忆之前的交互信息，为了给agent添加一个short-term memory，需要在创建agent时指定一个checkpointer，如下所示
+
+```python
+from langchain.agents import create_agent
+from langgraph.checkpoint.memory import InMemorySaver
+from langchain_ollama import ChatOllama
+
+model = ChatOllama(model="qwen3:4b", validate_model_on_init=True,
+    num_predict=1024,
+)
+agent = create_agent(model, checkpointer=InMemorySaver())
+
+response1 = agent.invoke(
+    {"messages": [{"role": "user", "content": "Hi! My name is Bob."}]},
+    {"configurable": {"thread_id": "1"}},  
+)
+print(response1)
+
+response2 = agent.invoke(
+    {"messages": [{"role": "user", "content": "Do you know my name"}]},
+    {"configurable": {"thread_id": "1"}},  
+)
+print(response2)   # 加入InMemorySaver，可以让模型正确回答这个问题
+```
+
+如果需要在生产中使用，参考：[in-production](https://docs.langchain.com/oss/python/langchain/short-term-memory#in-production)
+
+不同用户应该对应不同的memory，可以参考[customizing-agent-memory](https://docs.langchain.com/oss/python/langchain/short-term-memory#customizing-agent-memory)通过`state_schema` 来管理用户。
+
+如果保存了short-term memory，长对话可能会超过LLM的上下文长度，为了解决这个问题，有四个常见的解决方法，简单来说就是删除一些之前的消息，或者总结之前的消息等，详见[common-patterns](https://docs.langchain.com/oss/python/langchain/short-term-memory#common-patterns)
+
+langchain中提供了一些方法来访问记忆的内容，详见[access-memory](https://docs.langchain.com/oss/python/langchain/short-term-memory#access-memory)。
+
+### Middleware
+
+[Middleware - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/middleware)
+
+通过暴露一些hook控制agent中的过程，可以控制的过程如下所示
+![](https://mintcdn.com/langchain-5e9cc07a/RAP6mjwE5G00xYsA/oss/images/middleware_final.png?w=560&fit=max&auto=format&n=RAP6mjwE5G00xYsA&q=85&s=41b7dd647447978ff776edafe5f42499)
+
+
+### Model Context Protocol
+
+[Model Context Protocol (MCP) - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/mcp)
+
+MCP是一个用来标准化应用如何向LLM提供工具和上下文的开源协议，需要使用langchain-mcp-adapters库来定义。mcp支持几种机制：stdio（开辟一个子线程来执行任务，然后通过标准输入输出来获取信息）、Streamable HTTP（发送一个http请求）和Server-Sent Events（类似Streamable HTTP，但是针对实时流式通信）
+
+下面是一个例子
+
+```python
+from langchain_mcp_adapters.client import MultiServerMCPClient  
+from langchain.agents import create_agent
+
+
+client = MultiServerMCPClient(  
+    {
+        "math": {
+            "transport": "stdio",  # Local subprocess communication
+            "command": "python",
+            # Absolute path to your math_server.py file
+            "args": ["/path/to/math_server.py"],
+        },
+        "weather": {
+            "transport": "streamable_http",  # HTTP-based remote server
+            # Ensure you start your weather server on port 8000
+            "url": "http://localhost:8000/mcp",
+        }
+    }
+)
+
+tools = await client.get_tools()  
+agent = create_agent(
+    "claude-sonnet-4-5-20250929",
+    tools  
+)
+math_response = await agent.ainvoke(
+    {"messages": [{"role": "user", "content": "what's (3 + 5) x 12?"}]}
+)
+weather_response = await agent.ainvoke(
+    {"messages": [{"role": "user", "content": "what is the weather in nyc?"}]}
+)
+```
+
+
+
+### Retrieval
+
+[Retrieval - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/retrieval)
+
+Retrieval可以通过获取相关的外部知识来解决LLMs无法获取完整的知识的问题，是Retrieval-Augmented Generation的基础。下面是一个RAG的流程
+
+```mermaid
+flowchart LR
+  S(["Sources<br>(Google Drive, Slack, Notion, etc.)"]) --> L[Document Loaders]
+  L --> A([Documents])
+  A --> B[Split into chunks]
+  B --> C[Turn into embeddings]
+  C --> D[(Vector Store)]
+  Q([User Query]) --> E[Query embedding]
+  E --> D
+  D --> F[Retriever]
+  F --> G[LLM uses retrieved info]
+  G --> H([Answer])
+```
+
+下面介绍一个具体的例子[Build a semantic search engine with LangChain - Docs by LangChain](https://docs.langchain.com/oss/python/langchain/knowledge-base)
+先安装库langchain-community和pypdf，为了跟踪agent的内部过程，可以使用[langSmith](https://smith.langchain.com/)，下载一个[示例pdf](https://github.com/langchain-ai/langchain/blob/v0.3/docs/docs/example_data/nke-10k-2023.pdf)，首先加载pdf，然后再切分文本，将文本送入模型编码为embeddings（不同模型使用的embedding方法不同），embedding一般会存储在向量数据库（如chroma）中，向量数据库会提供一些方法进行相似度搜索
+
+```python
+from langchain_community.document_loaders import PyPDFLoader
+from langchain_text_splitters import RecursiveCharacterTextSplitter
+from langchain_ollama import OllamaEmbeddings
+from langchain_chroma import Chroma
+from typing import List
+from langchain_core.documents import Document
+from langchain_core.runnables import chain
+
+file_path = "./nke-10k-2023.pdf"
+loader = PyPDFLoader(file_path)
+text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200, add_start_index=True)
+
+docs = loader.load()  # load pdf
+all_splits = text_splitter.split_documents(docs)  # split document
+
+
+embeddings = OllamaEmbeddings(model="embeddinggemma")
+
+vector_store = Chroma(
+    collection_name="example_collection",
+    embedding_function=embeddings,
+    # persist_directory="./chroma_langchain_db",  # Where to save data locally, remove if not necessary
+)
+
+ids = vector_store.add_documents(documents=all_splits)
+
+@chain
+def retriever(query: str) -> List[Document]:
+    return vector_store.similarity_search(query, k=1)
+
+results = retriever.batch(
+    [
+        "How many distribution centers does Nike have in the US?",
+        "When was Nike incorporated?",
+    ]
+)
+print(results)
+```
+
+> 除了pdf，langchain中还有一些插件如[Microsoft](https://docs.langchain.com/oss/python/integrations/providers/microsoft)，可以用于解析word，excel等
+
+## Ollama
 
 [Ollama](https://ollama.com/)
 
