--- a/工具使用.md
+++ b/工具使用.md
@@ -1,5 +1,157 @@
 
 
+# Ruff
+
+[Ruff](https://docs.astral.sh/ruff/)
+
+一款静态代码分析和规范化工具，适用于python，比Flake8（代码分析工具）和Black（规范化工具）快很多。
+
+Ruff可以作为python库下载，然后直接在需要分析或者规范化的文件夹下执行命令即可
+
+```sh
+ruff check
+```
+
+使用`ruff format`命令规范化文件
+
+# uv
+
+[uv](https://docs.astral.sh/uv/)
+
+用来替代pip，速度比pip快很多
+
+安装完uv后，需要添加一个环境变量`UV_DEFAULT_INDEX`，这个变量的值和pip配置镜像源时的地址一致，如https://pypi.tuna.tsinghua.edu.cn/simple。
+
+以下是根据 uv（“uv”）官方文档“Features（特性）”一节整理的中文笔记，方便你快速理解其功能模块与使用场景。
+
+## 一个例子
+
+创建项目并且指定python版本，不需要指定小版本，指定3.x即可
+
+```sh
+uv init example --python 3.10
+```
+
+添加依赖
+
+```sh
+uv add numpy==1.23.5
+```
+
+在uv创建的虚拟环境中运行代码
+
+```sh
+uv run python main.py
+```
+
+> 一定要加uv run，否则会使用系统默认的python执行程序。
+
+
+## 可用功能
+
+### 管理Python 版本
+
+功能：安装、列出、查找、绑定、卸载不同的 Python 版本，为项目提供多版本支持。 
+常用命令示例：
+
+- `uv python install`：安装一个 Python 版本。
+- `uv python list`：列出可用／已安装的 Python 版本。
+- `uv python find`：查找已安装的某个 Python 版本。
+- `uv python pin`：将当前项目绑定（pin）使用特定 Python 版本。
+- `uv python uninstall`：卸载某个 Python 版本。 
+    
+适用场景：
+- 当你需要在一个开发环境管理多个 Python 版本时。
+- 项目明确要求使用特定 Python 版本，以确保一致性。
+- 想简化版本切换、绑定项目与版本关系。
+
+详见 [Installing and managing Python | uv](https://docs.astral.sh/uv/guides/install-python/)
+
+### 脚本
+
+功能：用于运行单个 Python 脚本，并为脚本添加／移除依赖。适合轻量级脚本型使用场景。
+典型命令：
+
+- `uv run`：执行一个脚本（如 `example.py`） 。
+- `uv add --script`：向脚本添加一个依赖包。
+- `uv remove --script`：从脚本依赖中移除一个包。
+
+适用场景：
+- 快速运行小测试脚本、工具脚本，而无需建立完整项目结构。
+- 在脚本级别轻松管理依赖。
+
+详见[Running scripts | uv](https://docs.astral.sh/uv/guides/scripts/#running-a-script-without-dependencies)
+
+### 项目
+
+功能：用于管理 Python 项目的生命周期 — 包括初始化、依赖管理、锁定、运行、构建、发布。
+主要命令包括：
+
+- `uv init`：初始化一个新的 Python 项目（生成 `pyproject.toml` 等）。
+- `uv add`：向项目中添加依赖。
+- `uv remove`：从项目中移除依赖。
+- `uv sync`：同步项目依赖到环境（即安装／调整包以匹配定义）。
+- `uv lock`：生成锁定文件（lockfile），确保依赖版本可复现。
+- `uv run`：在项目的环境中运行命令。
+- `uv tree`：查看项目的依赖树。
+- `uv build`：将项目打包成分发档案（比如 wheel 或 sdist）。 
+- `uv publish`：将项目发布到包索引。
+
+适用场景：
+- 开发中大型 Python 项目，需要版本控制、依赖锁定、构建、发布。
+- 团队协作开发、CI/CD流程中，保证环境一致性。
+- 从脚本发展成模块／包时，推荐转向此模块。
+
+详见[Working on projects | uv](https://docs.astral.sh/uv/guides/projects/)
+
+
+### 工具
+
+功能：管理和运行那些发布在 PyPI 等包索引、但一般作为工具（而非库）使用的软件。例如格式化器（如 `black`）、静态分析器（如 `ruff`）等。
+命令示例：
+- `uvx` / `uv tool run`：在一个临时环境中运行工具。
+- `uv tool install`：安装一个工具（用户级别）。
+- `uv tool uninstall`：卸载一个工具。 
+- `uv tool list`：列出已安装的工具。
+- `uv tool update-shell`：更新 shell，使得工具可执行程序被正确发现。
+
+适用场景：
+- 你希望安装或管理一些命令行工具（如 linters、formatters）而不是项目依赖。
+- 希望工具与项目隔离，或能在不同项目间共享。
+
+详见[Using tools | uv](https://docs.astral.sh/uv/guides/tools/)
+
+### pip 接口
+
+功能：为那些更习惯传统 `pip`／`venv` 工作流程的用户提供支持。即便主推 uv 的高层命令，但仍支持环境／包管理的“底层”流程。 
+相关操作包括：
+
+- 创建虚拟环境：`uv venv`，详见[Using environments | uv](https://docs.astral.sh/uv/pip/environments/#creating-a-virtual-environment)
+- 包管理：`uv pip install`、`uv pip show`、`uv pip freeze`、`uv pip check`、`uv pip list`、`uv pip uninstall`、`uv pip tree`，详见 [Managing packages | uv](https://docs.astral.sh/uv/pip/packages/)
+- 锁定环境：`uv pip compile`（生成 lockfile）、`uv pip sync`（同步环境与 lockfile），详见[Locking environments | uv](https://docs.astral.sh/uv/pip/compile/)
+    
+>使用时可能与原生 `pip`、`pip-tools` 的行为有差异，因此如果你严格依赖某些 `pip` 行为，要先查阅[兼容性文档](https://docs.astral.sh/uv/pip/compatibility/)。
+
+
+### 实用功能
+
+功能：管理 uv 本身的状态，如缓存、安装目录、Python 版本目录、更新 uv 本身。
+典型命令：
+- `uv cache clean`：清除缓存条目。
+- `uv cache prune`：删除过期缓存条目。
+- `uv cache dir`：显示 uv 的缓存目录路径。
+- `uv tool dir`：显示工具安装目录。
+- `uv python dir`：显示 uv 安装的 Python 版本目录路径。
+- `uv self update`：将 uv 更新至最新版本。 
+
+适用场景：
+
+- 管理 uv 的安装环境、清理旧版本、查看目录路径。
+- 当 uv 自己的版本过旧或行为异常时进行更新
+- 优化系统磁盘使用，清理缓存。
+
+
+
 # EndNote
 
 
