--- a/人工智能.md
+++ b/人工智能.md
@@ -4,6 +4,239 @@
 # 理论知识
 
 
+## 自动求导
+
+参考GitHub项目：[karpathy/micrograd: A tiny scalar-valued autograd engine and a neural net library on top of it with PyTorch-like API](https://github.com/karpathy/micrograd)
+
+首先需要创建一个类，用来表示张量（为了简单，只考虑单个数字的张量），这个类具备自动求导的能力。实现加法、乘法、幂次和relu函数的前向和反向，其它如减法、除法在此基础上实现。为了反向传播梯度，构建一个图，输出作为父节点，输入作为子节点。
+
+```python
+class Value:
+    def __init__(self, data, _children=(), _op=""):
+        self.data = data
+        self.grad = 0
+        self._backward = lambda: None
+        self._prev = set(_children)
+        self._op = _op
+
+    def __add__(self, other):
+        other = other if isinstance(other, Value) else Value(other)
+        out = Value(self.data + other.data, (self, other), "+")
+
+        def _backward():
+            self.grad += out.grad
+            other.grad += out.grad
+
+        out._backward = _backward
+        return out
+
+    def __mul__(self, other):
+        other = other if isinstance(other, Value) else Value(other)
+        out = Value(self.data * other.data, (self, other), "*")
+
+        def _backward():
+            self.grad += other.data * out.grad
+            other.grad += self.data * out.grad
+
+        out._backward = _backward
+        return out
+
+    def __pow__(self, other):
+        assert isinstance(other, (int, float)), "only supports int or float"
+        out = Value(self.data ** other, (self,), f"**{other}")
+
+        def _backward():
+            self.grad += out.grad * (other * self.data ** (other - 1))
+
+        out._backward = _backward
+        return out
+
+    def relu(self):
+        out = Value(0 if self.data < 0 else self.data, (self, ), "relu")
+
+        def _backward():
+            self.grad += (out.data > 0) * out.grad
+
+        out._backward = _backward
+        return out
+
+    def backward(self):
+        topo = []
+        visited = set()
+		
+		# bfs构建拓扑顺序
+        def build_topo(v):
+            if v not in visited:
+                visited.add(v)
+                for child in v._prev:
+                    build_topo(child)
+                topo.append(v)
+
+        build_topo(self)
+        self.grad = 1
+        for v in reversed(topo):
+            v._backward()
+
+    def __neg__(self):
+        return self * -1
+
+    def __radd__(self, other):
+        return self + other
+
+    def __sub__(self, other):
+        return self + (-other)
+
+    def __rsub__(self, other):
+        return (-self) + other
+
+    def __rmul__(self, other):
+        return self * other
+
+    def __truediv__(self, other):
+        return self * (other ** -1)
+
+    def __rtruediv__(self, other):
+        return (self ** -1) * other
+
+    def __repr__(self):
+        return f"Value({self.data}, {self.grad})"
+
+```
+
+有了Value类，可以编写一个MLP
+
+```python
+import random
+from value import Value
+
+
+class Module:
+    def zero_grad(self):
+        for p in self.parameters():
+            p.grad = 0
+
+    def parameters(self):
+        return []
+
+
+class Neuron(Module):
+
+    def __init__(self, nin, nonlin=True):
+        self.w = [Value(random.uniform(-1, 1)) for _ in range(nin)]
+        self.b = Value(0)
+        self.nonlin = nonlin
+
+    def __call__(self, x):
+        act = sum((wi * xi for wi, xi in zip(self.w, x))) + self.b
+        return act.relu() if self.nonlin else act
+
+    def parameters(self):
+        return self.w + [self.b]
+
+    def __repr__(self):
+        return f"{'ReLU' if self.nonlin else 'Linear'}Neuron({len(self.w)})"
+
+
+class Layer(Module):
+    def __init__(self, nin, nout, nonlin=True):
+        self.neurons = [Neuron(nin, nonlin) for _ in range(nout)]
+
+    def __call__(self, x):
+        out = [n(x) for n in self.neurons]
+        return out[0] if len(out) == 1 else out
+
+    def parameters(self):
+        return [p for n in self.neurons for p in n.parameters()]
+
+    def __repr__(self):
+        return f"Layer of [{', '.join(str(n) for n in self.neurons)}]"
+
+
+class MLP(Module):
+    def __init__(self, nin, nouts):
+        sz = [nin] + nouts
+        self.layers = [Layer(sz[i], sz[i + 1], nonlin=i != len(nouts) - 1) for i in range(len(nouts))]
+
+    def __call__(self, x):
+        for layer in self.layers:
+            x = layer(x)
+        return x
+
+    def parameters(self):
+        return [p for layer in self.layers for p in layer.parameters()]
+
+    def __repr__(self):
+        return f"MLP of [{', '.join(str(layer) for layer in self.layers)}]"
+
+```
+
+
+可以编写一个demo验证正确性，标签为1或者-1，损失函数为hinge loss
+
+$$
+L(y, \hat y) = \max(0, 1-y * \hat y)
+$$
+使用其它损失函数可能会导致不稳定
+
+```python
+import random
+import numpy as np
+from sklearn.datasets import make_moons, make_blobs
+from nn import MLP
+from value import Value
+
+def loss(x, y, batch_size=None):
+    if batch_size is None:
+        Xb, yb = X, y
+    else:
+        ri = np.random.permutation(X.shape[0])[:batch_size]
+        Xb, yb = X[ri], y[ri]
+    # 将输入转为Value
+    inputs = [list(map(Value, xrow)) for xrow in Xb]
+
+    # 将所有的inputs送入model
+    scores = list(map(model, inputs))
+
+    losses = [(1 - yi * scorei).relu() for yi, scorei in zip(yb, scores)]
+    data_loss = sum(losses) * (1.0 / len(losses))
+
+    alpha = 1e-4
+    reg_loss = alpha * sum((p * p for p in model.parameters()))
+    total_loss = data_loss + reg_loss
+
+    accuracy = [(yi > 0) == (scorei.data > 0) for yi, scorei in zip(yb, scores)]
+    return total_loss, sum(accuracy) / len(accuracy)
+
+
+if __name__ == '__main__':
+
+    X, y = make_moons(n_samples=100, noise=0.1)
+
+    y = y * 2 - 1  # make y be -1 or 1
+
+    model = MLP(2, [16, 16, 1])
+
+    # optimization
+    for k in range(100):
+
+        # forward
+        total_loss, acc = loss(X, y)
+
+        # backward
+        model.zero_grad()
+        total_loss.backward()
+
+        # update (sgd)
+        learning_rate = 1.0 - 0.9 * k / 100
+        for p in model.parameters():
+            p.data -= learning_rate * p.grad
+
+        if k % 1 == 0:
+            print(f"step {k} loss {total_loss.data}, accuracy {acc * 100}%")
+
+```
+
+
 ## D2L
 
 ### 编程小技巧
@@ -153,18 +386,15 @@ class Conv2D(nn.Module):
 #### RNN
 
 考虑一个自回归模型，对时序数据，估计 $P(x_t|x_{t-1},\cdots, x_1)$，有下面两种方法
-1. 自回归模型
-使用观测序列 $x_{t−1},\cdots,x_{t−\tau}$ 来估计 $x_t$。
-2. 隐变量自回归模型
-保留一些对过去观测的总结 $h_t$，并且同时更新预测 $\hat x_t$ 和总结 $h_t$。其中，$\hat x_t = P(x_t|h_t)$，$h_t=g(h_{t-1},x_{t-1})$。
+1. 自回归模型，使用观测序列 $x_{t−1},\cdots,x_{t−\tau}$ 来估计 $x_t$。
+2. 隐变量自回归模型，保留一些对过去观测的总结 $h_t$，并且同时更新预测 $\hat x_t$ 和总结 $h_t$。其中，$\hat x_t = P(x_t|h_t)$，$h_t=g(h_{t-1},x_{t-1})$。
 
 RNN 中也包含了对于过去观测的总结 $h_t$，与一般的 MLP 不同，RNN 的隐层计算公式如下。
 $$
 H_t = \phi(X_tW_{xh}+H_{t-1}W_{hh}+b_h)
 $$
 一般的MLP为 $H_t = \phi(X_tW_{xh}+b_h)$，其中 $\phi$ 为激活函数。
-对于 RNN 训练语言模型时，可以将输入序列向后移动一位作为输出序列。
-对于训练好的 RNN 模型，输入文本，预测后面文本的代码如下：
+对于 RNN 训练语言模型时，可以将输入序列向后移动一位作为输出序列。对于训练好的 RNN 模型，输入文本，预测后面文本的代码如下：
 ```python
 def predict(self, prefix, num_preds, vocab, device=None):
     state, outputs = None, [vocab[prefix[0]]]  # 一开始state为空
@@ -260,9 +490,6 @@ $$
 
 
 
-
-
-
 ## 自然语言处理
 
 [自然语言处理3：词向量 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/115532919)
@@ -272,8 +499,6 @@ $$
 Sim(u,v)=\frac{u^Tv}{||u||\cdot||v||}
 $$
 词向量相减可以表示各个词在哪些维度上存在差距。
-
-
 
 ### N-gram语言模型
 
@@ -672,8 +897,78 @@ $\theta_0$ 从均值为0.01，方差为0.001的正态分布中初始化。
 
 EM算法通过迭代来对含有隐变量的概率参数模型进行最大似然估计或极大后验概率估计
 
-代码： [emCoins[EM算法估计硬币正面概率].py](D:\postgraduateLearn\first\codes\emCoins[EM算法估计硬币正面概率].py) 
+已知观测到一组由未知主体触发的数据，每组数据由单个主体触发。假设这些事件由两个主体触发，现在需要计算两个主体发生某个事件的概率，可以使用em算法
 
+1. 先初始化两个主体发生该事件的概率，如假定均为0.5；
+2. 计算在两个主体发生该事件的概率下，每组数据由两个主体触发的概率；
+3. 计算得到每组数据由两个主体触发的概率后，更新两个主体发生该事件的概率
+
+下面是一个例子，假设有两个硬币，两个硬币每个投10次，记录一组数据（数据和硬币的对应关系未知），求两个硬币投出正面的概率
+
+```python
+import numpy as np
+
+# 一共5组数据，每组数据由单个未知主体产生，
+# 单个主体产生的数据以[a, b]形式表示，a为a事件发生的次数，b为其它事件发生的次数
+data = np.array([[5, 5], [9, 1], [8, 2], [4, 6], [7, 3]])  
+
+# 初始化不能相等，否则后面会无法更新
+p1 = 0.6
+p2 = 0.5
+
+for i in range(10):
+    # probs为每组数据由两个主体产生的概率
+    probs = [[0, 0] for _ in range(len(data))]
+    for j in range(len(data)):
+        # 第1个主体触发第j组数据的概率
+        prob1 = p1 ** data[j][0] * (1 - p1) ** data[j][1]
+        # 第2个主体触发第j组数据的概率
+        prob2 = p2 ** data[j][0] * (1 - p2) ** data[j][1]
+        probs[j][0] = prob1 / (prob1 + prob2) # 第j组数据由第1个主体触发的概率
+        probs[j][1] = prob2 / (prob1 + prob2)
+
+    probs = np.array(probs)
+    # 根据每组数据由两个主体触发的概率，计算每个主体发生a事件的概率
+    p1 = sum(probs[:, 0] * data[:, 0]) / sum(probs[:, 0] * np.sum(data, axis=-1))
+    p2 = sum(probs[:, 1] * data[:, 0]) / sum(probs[:, 1] * np.sum(data, axis=-1))
+
+print(p1)
+print(p2)
+```
+
+第二个例子：假设有50个男生身高和50个女生身高混在一起，男生和女生的身高分布为高斯分布，现在需要求出男生身高和女生身高的分布参数。
+
+```python
+import random
+import numpy as np
+
+m_mean, m_std = 175, 5
+f_mean, f_std = 165, 6
+
+# 生成数据
+heights = np.concatenate((np.random.normal(m_mean, m_std, 1000), np.random.normal(f_mean, f_std, 1000)))
+random.shuffle(heights)
+
+# 估计值
+pm_mean, pm_std = 175, 10
+pf_mean, pf_std = 160, 8
+
+# 开始迭代
+for i in range(1000):
+    # 记录哪些是男性，哪些是女性
+    prob_m = np.abs(heights - pm_mean) / pm_std
+    prob_f = np.abs(heights - pf_mean) / pf_std
+    males = prob_m > prob_f
+    females = prob_f > prob_m
+    
+    pm_mean, pm_std = np.mean(heights[males]), np.std(heights[males])
+    pf_mean, pf_std = np.mean(heights[females]), np.std(heights[females])
+
+print(f"male mean: {pm_mean}, std: {pm_std}")
+print(f"female mean: {pf_mean}, std: {pf_std}")
+```
+
+如果只有50个男生和女生，估计不太准确，但是有1000个男生和女生时，估计就比较准确了
 
 ## 条件随机场 CRF
 
@@ -842,7 +1137,6 @@ torch_geometric 库中有许多的现成的模型组件。PyG 中通过一个 `t
 `data.pos`：节点的位置矩阵 `[num_nodes, num_dimensions]`
 
 注意，data 并不局限于这些属性，也并不需要所有的属性都被赋值。
-
 
 
 
@@ -2299,6 +2593,43 @@ softplus可以用relu近似，得到
 
 # LLM
 
+## 理论知识
+
+### Scaling Laws
+
+论文地址：[2001.08361](https://arxiv.org/pdf/2001.08361)、[2203.15556](https://arxiv.org/pdf/2203.15556)
+
+这篇论文讨论了一个问题：在给定计算量下，模型参数量和训练总token数（训练数据乘训练的轮次）如何权衡，假设N为模型参数，D为训练总token数，C为计算量，如果求出一个最优的N和D使得预训练损失$L(N, D)$最小
+
+$$
+{N_{opt}}(C),{D_{opt}}(C) = \mathop {\arg \min }\limits_{N,D\;s.t.\;{\rm{FLOPs}}(N,D) = C} L(N,D)
+$$
+
+论文中考虑了三种方法来计算最优N和D
+
+1. 固定模型参数，修改训练总token数，最优为 ${N_{opt}} \propto {C^a}\quad {D_{opt}} \propto {C^b}$，a和b均取0.5
+2. 在9种计算量设置下，修改模型参数，最优为${N_{opt}} \propto {C^a}\quad {D_{opt}} \propto {C^b}$，a=0.49，b=0.51
+3. 针对前两个方法得到的数据进行建模，假设损失满足
+$$
+\hat L(N,D) = E + {A \over {{N^\alpha }}} + {B \over {{D^\beta }}}
+$$
+最优为
+$$
+{N_{opt}}(C) = G{\left( {{C \over 6}} \right)^a},{D_{opt}}(C) = {G^{ - 1}}{\left( {{C \over 6}} \right)^b}\quad G = {\left( {{{\alpha A} \over {\beta B}}} \right)^{{1 \over {\alpha  + \beta }}}},a = {\beta  \over {\alpha  + \beta }},b = {\alpha  \over {\alpha  + \beta }}
+$$
+其中a=0.46，b=0.51
+
+在实际使用时，遵循以下步骤：
+1. 先在不同数据规模训练一组大小不同的小模型，得到loss
+2. 对得到的loss绘制log-log图，拟合幂律
+$$
+\eqalign{
+  & L(N) = a{N^{ - \alpha }} + c  \cr 
+  & L(D) = b{D^{ - \beta }} + c \cr} 
+$$
+3. 确定训练预算，假定每个token的训练成本为6N，则C=6ND
+4. 根据上面的方法1，${N_{opt}} \propto {C^{0.5}}\quad {D_{opt}} \propto {C^{0.5}}$，给定C=6ND，Chinchilla给出的结论为：训练 tokens 数约等于模型参数数量的20倍
+5. 根据$\alpha$和$\beta$判断通过模型规模还是数据规模来降低损失
 
 ## vllm
 
