--- a/工具使用.md
+++ b/工具使用.md
@@ -1,4 +1,154 @@
 
+# Astro
+
+[Astro](https://astro.build/)
+
+用于构建内容驱动网站的web框架，支持主流的UI框架（react、vue等），可以用来写博客、文档等。
+
+## 创建项目
+
+```sh
+npm create astro@latest
+```
+
+有四种模板可选
+
+![](images/tools/astro_tmpl.png)
+
+Astro项目会有以下项目
+
++ `src/*`：项目源代码
++ `public/*`：一些资源文件（字体、图标等）
++ `package.json`：项目依赖文件
++ `astro.config.mjs`：Astro配置文件
++ `tsconfig.json`：typescript配置文件
+
+`src/` 目录是项目的大部分源码所在位置。包括但不限于：
+
+- [Pages](https://docs.astro.build/en/basics/astro-pages/)
+- [Layouts](https://docs.astro.build/en/basics/layouts/)
+- [Astro components](https://docs.astro.build/en/basics/astro-components/)
+- [UI framework components (React, etc.)](https://docs.astro.build/en/guides/framework-components/)
+- [Styles (CSS, Sass)](https://docs.astro.build/en/guides/styling/)
+- [Markdown](https://docs.astro.build/en/guides/markdown-content/)
+- [Images to be optimized and processed by Astro](https://docs.astro.build/en/guides/images/)
+
+ 构建处理：Astro 对 `src/` 中的文件会进行处理、优化、打包。不是所有文件都原封不动地到浏览器，比如 Astro 组件会渲染成静态 HTML。虽然文档推荐某些目录结构 (`components/`、`layouts/`、`styles/`)，但你有较大的灵活性：除 `src/pages/` 之外，其它目录可以自由命名和组织。
+
+`src/pages/` 目录
+
+- 必须存在：`src/pages/` 是 Astro 项目中非常核心的目录。文档明确指出，如果缺少这个目录，网站将没有页面/路由。
+- 该目录下的文件会被 Astro 用来生成页面 (基于文件路由) ——你在这里放 `.astro`、`.md`、`.mdx` 等页面内容。
+
+`src/components/` 目录
+
+- 用于存放可重用组件 (Astro 组件 + UI 框架组件) 。这是一个社区约定的结构，但不是强制要求。 
+- 这样做有助于将 UI 的不同部分模块化和复用：按钮、导航条、卡片等等组件可以统筹管理。
+
+`src/layouts/` 目录
+
+- 布局 (Layout) 是一种 Astro 组件，用来定义多个页面共享的 UI 结构 (例如头部、导航、页脚等) 。
+- 布局组件里通常包括一个 `<slot />`，页面内容会被注入到 slot 里。 (这是布局设计的一般方式) 
+- 虽然这是推荐做法 (约定俗成)，但不是强制的。你也可以把布局组件放在别处，甚至和页面放在一起。
+
+`src/styles/` 目录
+
+- 这是一个常见用来存储 CSS / Sass 文件的目录。将样式文件放在 `src/styles/` 是推荐做法，但不是必须的。
+- 重要的是，样式要在 `src/` 目录里 (或其它地方被正确 import)，Astro 才会处理和优化它们。 
+
+`public/` 目录
+
+- `public/` 用来存放 **无需构建处理 (build) 的静态资产**：例如字体 (fonts)、图标 (icons)、`robots.txt`、`manifest.webmanifest` 等。 
+- 这些文件会在构建过程中被 **原封不动地复制** 到最终输出目录。
+- 虽然你可以把 JS 或 CSS 文件放在 `public/`，但这样做的话它们 **不会被 Astro 打包或优化**。因此，一般建议你自己写的 CSS / JS 放在 `src/`。 
+
+`package.json`
+
+- 这个文件是项目的 manifest，用来管理依赖 (dependencies) 和开发依赖 (devDependencies)，定义脚本 (如 `dev`、`build`)。 
+    
+- Astro 推荐把大部分依赖 (尤其是构建时/运行时会用到的) 放在 `dependencies`。只有在确实是开发阶段才考虑 `devDependencies`。 
+
+ `astro.config.mjs` (或 `.js` / `.ts`)
+
+- 这个是 Astro 的配置文件。你可以在这里定义：集成（integrations）、构建选项、服务器选项等。 
+- Astro 支持多种配置文件格式： `.mjs`, `.js`, `.cjs`, `.ts` 等。根据你是否使用 TypeScript 可选择不同格式。
+- 如果你用 TypeScript 的 `.ts` 配置文件，Astro 会使用 `tsm` 来加载它，并遵循你的 `tsconfig.json`。
+
+`tsconfig.json`
+
+- 这是 TypeScript 的配置文件 (如果你在项目中使用 TypeScript 或希望编辑器更好支持 import 等功能的话非常推荐) 。 
+- 虽然不是严格“必须” (如果你不写 TS 也可以不用)，但没有它的话，有些编辑器功能 (比如某些包导入提示) 会受限。
+
+
+## 部署至Github
+
+[Deploy your Astro Site to GitHub Pages | Docs](https://docs.astro.build/en/guides/deploy/github/)
+
+1. 首先创建一个astro项目，可以选择blog模板，选择创建git；
+2. 在GitHub中创建一个仓库`astro_site`用来同步本地的astro项目；
+3. 在本地项目中的`.github/workflows/deploy.yml`，内容如下
+```yml
+name: Deploy to GitHub Pages
+
+on:
+  # Trigger the workflow every time you push to the `main` branch
+  # Using a different branch name? Replace `main` with your branch’s name
+  push:
+    branches: [ main ]
+  # Allows you to run this workflow manually from the Actions tab on GitHub.
+  workflow_dispatch:
+
+# Allow this job to clone the repo and create a page deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout your repository using git
+        uses: actions/checkout@v5
+      - name: Install, build, and upload your site
+        uses: withastro/action@v5
+        # with:
+          # path: . # The root location of your Astro project inside the repository. (optional)
+          # node-version: 24 # The specific version of Node that should be used to build your site. Defaults to 22. (optional)
+          # package-manager: pnpm@latest # The Node package manager that should be used to install dependencies and build your site. Automatically detected based on your lockfile. (optional)
+          # build-cmd: pnpm run build # The command to run to build your site. Runs the package build script/task by default. (optional)
+        # env:
+          # PUBLIC_POKEAPI: 'https://pokeapi.co/api/v2' # Use single quotation marks for the variable value. (optional)
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+```
+
+2. 配置`astro.config.mjs`，添加site和base
+```
+import { defineConfig } from 'astro/config'
+
+import { defineConfig } from 'astro/config'
+
+export default defineConfig({
+  site: 'https://xxxx.github.io',
+  base: '/my-repo',
+})
+```
+
+3. 在远程仓库的设置页面，找到Pages页面，选择Source为Github Actions
+
+![](images/tools/github_pages.png)
+在选择完Github Actions后，可以选择browse all workflows，选择astro，这样会在`.github/workflows`创建`astro.yml`。
+
 
 # Ruff
 
